--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 <body>
 
    <div class="container">
-    
+        <div class="quotes">
+            <p id="quote">Будь собою, інші ролі зайняті.</p>
+            <h3 id="author">- Оскар Уайльд</h3>
+        </div>
+   </div>
+   <div class="divButton">
+        <button id="btn-click" type="button" class="btn btn-success">Generate quote</button>
    </div>
 
     <script src="script.js"></script>
